schroot (1.4.9-1) unstable; urgency=low

  * New upstream stable release.
  * Hide deprecation warning for deprecated priority= key name when
    reloading sessions (Closes: #593256).

 -- Roger Leigh <rleigh@debian.org>  Wed, 18 Aug 2010 23:06:29 +0100

schroot (1.4.8-1) unstable; urgency=low

  * New upstream stable release.
  * Add da translation (Closes: #589082).  Thanks to Joe Hanson.
  * Update cs translation (Closes: #588734).  Thanks to Miroslav Kure.
  * Update de translation (Closes: #588963).  Thanks to Holger Wansing.
  * Update fr translation (Closes: #589079).  Thanks to Thomas Blein.
  * sbuild::auth: Always preserve TERM and SHELL environment
    variables (Closes: #589830, #589917).  Thanks to Bastian Blank and
    Arno Renevier.
  * Don't restrict valid session names (Closes: #589889).  Thanks to
    Zach Carter.
  * Correctly check for boost::program_options::variables_map
    (Closes: #589658).  Thanks to Zach Carter.
  * Session names and chroot names may use the same names now that
    separate session: and chroot: namespaces are used
    (Closes: #512131).
  * Upgrade to Standards Version 3.9.1 (no changes).

 -- Roger Leigh <rleigh@debian.org>  Sun, 15 Aug 2010 11:34:26 +0100

schroot (1.4.7-1) unstable; urgency=low

  * New upstream stable release.
  * Use standards version 3.9.0.
  * Correctly distribute profile conffiles (Closes: #588247).  Thanks
    to Mario Holbe.
  * Update it and zh_CN translations.  Thanks to Vincenzo Campanella
    and Ji ZhengYu.

 -- Roger Leigh <rleigh@debian.org>  Tue, 06 Jul 2010 23:34:30 +0100

schroot (1.4.6-1) unstable; urgency=low

  * New upstream stable release.
  * New configuration key preserve-environment allows preservation of
    the environment for a chroot without needing to use the
    --preserve-environment option.
  * The desktop configuration profile no longer bind mounts /var/run;
    gdm3 users will need to comment out the necessary bind mount
    in /etc/schroot/desktop/fstab.